--- a/index.html
+++ b/index.html
@@ -8,12 +8,28 @@
     <title>lecture</title>
 </head>
 <body>
+    <main>
+
+
+
+        <header>
+
+
+        </header>
+        <section>
+                <h1>nexlink first lecture</h1>
+                <h2>nexlink first lecture</h2>
+                <h3>nexlink first lecture</h3>
+                <h3>nexlink first lecture</h3>
+                <p>The Story is about a young seagelThe Story is about a young seagelThe Story is about a young seagel
+                The Story is about a young seagel</p>
+
+        </section>
+        <footer>
+
+
+        </footer>
+    </main>
     
-    <h1>nexlink first lecture</h1>
-    <h2>nexlink first lecture</h2>
-    <h3>nexlink first lecture</h3>
-    <h3>nexlink first lecture</h3>
-    <p>The Story is about a young seagelThe Story is about a young seagelThe Story is about a young seagel
-        The Story is about a young seagel</p>
 </body>
 </html>
